Fix profile field overflow, remove scroll handler, increase delay

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -10450,9 +10450,10 @@ noscript {
     dl {
       display: flex;
       align-items: center;
+      gap: 4px;
 
       dt {
-        flex: 1 1 auto;
+        flex: 0 0 auto;
         color: $dark-text-color;
         min-width: 0;
         overflow: hidden;
@@ -10461,8 +10462,12 @@ noscript {
       }
 
       dd {
-        flex: 0 0 auto;
+        flex: 1 1 auto;
         font-weight: 500;
+        min-width: 0;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
       }
 
       &.verified {
